--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start:dev": "sh scripts/set_env.sh dev && react-native start",
+    "start:acc": "sh scripts/set_env.sh acc && react-native start",
+    "start:prod": "sh scripts/set_env.sh prod && react-native start",
     "test": "jest"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.1"
+    "react-native": "0.71.1",
+    "react-native-config": "^1.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
